--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-icons": "^5.2.1"
     },
     "devDependencies": {
+        "@types/react": "^18.3.3",
         "eslint": "^8",
         "eslint-config-next": "14.2.4",
         "postcss": "^8",
